@@ -745,31 +745,6 @@
                 <!-- 指定 JDK 版本 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <staleMillis>1</staleMillis>
-                    <useIncrementalCompilation>true</useIncrementalCompilation>
-                    <!-- 启用分离的编译进程 -->
-                    <!-- <fork>true</fork>-->
-                    <!-- 编译器初始化内存大小 -->
-                    <meminitial>128m</meminitial>
-                    <!-- 编译器最大可用内存 -->
-                    <maxmem>1624m</maxmem>
-                    <compilerArgs>
-                        <arg>-Xpkginfo:always</arg>
-                        <!-- 过期的方法的警告-->
-                        <arg>-Xlint:deprecation</arg>
-                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
